# network

./: .env.example  .gas-snapshot  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  GETTING_STARTED.md  PROTOCOL.md  README.md  foundry.toml  prove.sh  rust-toolchain.toml  setup.sh  x.sh
.github/actions/setup/: action.yml
.github/workflows/: docker.yml  pr.yml  pr_lint.yml  release.yml
benchmark/: Cargo.toml  build.rs
benchmark/src/: lib.rs  main.rs
contracts/: .env.example  .gas-snapshot  DEPLOYMENT.md  DESIGN.md  OPERATIONS.md  README.md  deployment_comparison.md  foundry.toml  settings.md
contracts/deployments/: 1.json  11155111.json  31337.json
contracts/fixtures/: groth16-fixture.json  plonk-fixture.json
contracts/script/deploy/: All.s.sol  AllAtomic.s.sol  IntermediateSuccinct.s.sol  Prover.s.sol  Succinct.s.sol  SuccinctGovernor.s.sol  SuccinctStaking.s.sol  SuccinctVApp.s.sol  USDC.s.sol  VAPP.s.sol
contracts/script/e2e/: MintAndDeposit.s.sol
contracts/script/integration/: SuccinctVApp.s.sol
contracts/script/operations/: CreateProverAndStake.s.sol  DecodePublicValues.s.sol  Mint.s.sol
contracts/script/utils/: AtomicDeployer.sol  Base.s.sol  PostDeployment.s.sol
contracts/src/: ProverRegistry.sol  SuccinctGovernor.sol  SuccinctRewards.sol  SuccinctStaking.sol  SuccinctVApp.sol
contracts/src/interfaces/: IIntermediateSuccinct.sol  IProver.sol  IProverRegistry.sol  ISP1Verifier.sol  ISuccinct.sol  ISuccinctStaking.sol  ISuccinctVApp.sol  IWETH.sol
contracts/src/libraries/: Actions.sol  FeeCalculator.sol  ProverRegistry.sol  PublicValues.sol  Receipts.sol
contracts/src/mocks/: MockStaking.sol  MockUSDC.sol  MockVApp.sol  MockVerifier.sol
contracts/src/tokens/: IntermediateSuccinct.sol  StakedSuccinct.sol  Succinct.sol  SuccinctProver.sol
contracts/test/: E2E.t.sol  Integration.t.sol  Receipts.t.sol  SuccinctGovernor.t.sol  SuccinctStaking.cancelslash.t.sol  SuccinctStaking.dispense.t.sol  SuccinctStaking.fulfillment.t.sol  SuccinctStaking.initalization.t.sol  SuccinctStaking.misc.t.sol  SuccinctStaking.registry.t.sol  SuccinctStaking.reward.t.sol  SuccinctStaking.security.t.sol  SuccinctStaking.slash.t.sol  SuccinctStaking.stake.t.sol  SuccinctStaking.t.sol  SuccinctStaking.transfer.t.sol  SuccinctStaking.unstake.t.sol  SuccinctToken.t.sol  SuccinctVApp.delegate.t.sol  SuccinctVApp.deposit.t.sol  SuccinctVApp.fork.t.sol  SuccinctVApp.owner.t.sol  SuccinctVApp.pause.t.sol  SuccinctVApp.reward.t.sol  SuccinctVApp.state.t.sol  SuccinctVApp.step.t.sol  SuccinctVApp.t.sol  SuccinctVApp.withdraw.t.sol  debug_test.sol
contracts/test/utils/: FixtureLoader.sol  MockERC20.sol  MockERC4626.sol  WETH9.sol
crates/artifacts/: Cargo.toml
crates/artifacts/src/: lib.rs
crates/benchmark/: Cargo.toml  build.rs
crates/benchmark/src/: lib.rs  main.rs
crates/calibrator/: Cargo.toml  build.rs
crates/calibrator/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/fee/: Cargo.toml
crates/fee/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  server.rs  version.rs
crates/network-types/src/: lib.rs
crates/network/artifacts/: Cargo.toml
crates/network/artifacts/src/: lib.rs
crates/network/pricing/: Cargo.toml
crates/network/pricing/src/: error.rs  lib.rs  math.rs  provider.rs
crates/network/rpc/: Cargo.toml
crates/network/rpc/src/: fetch.rs  grpc.rs  lib.rs  retry.rs
crates/network/utils/: Cargo.toml
crates/network/utils/src/: cuda.rs  domain.rs  error.rs  lib.rs  logger.rs  time.rs
crates/node/: Cargo.toml
crates/node/calibrator/: Cargo.toml  build.rs
crates/node/calibrator/src/: lib.rs
crates/node/core/: Cargo.toml
crates/node/core/src/: lib.rs  serial.rs
crates/node/metrics/: Cargo.toml
crates/node/metrics/src/: hooks.rs  recorder.rs  server.rs
crates/node/src/: lib.rs  serial.rs
crates/prover-core/: Cargo.toml
crates/prover-core/src/: balance.rs  bid.rs  config.rs  error.rs  grpc.rs  lib.rs  main.rs  prove.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: fetch.rs  lib.rs  retry.rs
crates/types/artifact/: Cargo.toml  build.rs
crates/types/artifact/src/: artifact.rs  lib.rs
crates/types/network/: Cargo.toml  build.rs
crates/types/network/src/: lib.rs  network.rs  signed_message.rs  types.rs
crates/types/verifier/: Cargo.toml  build.rs
crates/types/verifier/src/: lib.rs  network.rs  verifier.rs
crates/utils/: Cargo.toml
crates/utils/src/: cuda.rs  domain.rs  error.rs  lib.rs  logger.rs  time.rs
crates/vapp/: Cargo.toml
crates/vapp/src/: errors.rs  fee.rs  helpers.rs  input.rs  lib.rs  merkle.rs  receipts.rs  signing.rs  sol.rs  sparse.rs  state.rs  storage.rs  transactions.rs  u256.rs  utils.rs  verifier.rs
crates/vapp/tests/: clear.rs  create_prover.rs  delegate.rs  deposit.rs  state_test_spec.md  transfer.rs  withdraw.rs  withdraw_overflow.rs
crates/vapp/tests/common/: mod.rs
elfs/: spn-fibonacci-program
program/: Cargo.toml
program/src/: main.rs
programs/examples/fibonacci/: Cargo.toml
programs/examples/is-prime/: Cargo.toml
programs/fibonacci/src/: main.rs
programs/is-prime/src/: main.rs
programs/vapp/aggregation/: Cargo.toml  build.rs
programs/vapp/aggregation/src/: key.rs  main.rs
programs/vapp/stf/: Cargo.toml
programs/vapp/stf/src/: main.rs
proto/: artifact.proto  network.proto  types.proto  verifier.proto
src/: bid.rs  config.rs  grpc.rs  lib.rs  main.rs  network.rs  prove.rs  retry.rs  reward.rs
