[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.79"
repository = "https://github.com/succinctlabs/sp1"
keywords = ["sp1", "succinct", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
    "bin/cli",
    "crates/types/artifact",
    "crates/types/network",
    "crates/utils",
    "crates/node",
    "crates/artifacts",
    "crates/calibrator",
    "crates/rpc",
    "programs/fibonacci",
]
resolver = "2"

[workspace.dependencies]
# spn
spn-artifacts = { path = "crates/artifacts" }
spn-artifact-types = { path = "crates/types/artifact" }
spn-calibrator = { path = "crates/calibrator" }
spn-network-types = { path = "crates/types/network" }
spn-node = { path = "crates/node" }
spn-utils = { path = "crates/utils" }
spn-rpc = { path = "crates/rpc" }

# sp1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "j/v4.1.6-no-rust", features = ["native-gnark"] }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", branch = "j/v4.1.6-no-rust" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "j/v4.1.6-no-rust" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", branch = "j/v4.1.6-no-rust" }

# aws
aws-config = "1.5.3"
aws-sdk-s3 = "1.38.0"
aws-smithy-async = { version = "1.2.1", features = ["rt-tokio"] }

# alloy
alloy = { version = "0.11.0", features = ["full"] }
alloy-signer = "0.11.0"
alloy-primitives = "1.0"
alloy-signer-local = "0.11.0"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "std",
    "env-filter",
] }

# prost
prost-types = "0.13.0"
prost-build = "0.13.0"
prost = "0.13.0"

# serde
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.104"

# tonic
tonic = { version = "0.12", features = ["tls", "tls-roots", "gzip"] }
tonic-build = "0.12.0"

# misc
anyhow = "1.0.71"
async-trait = "0.1.68"
backoff = { version = "0.4", features = ["futures", "tokio"] }
bytes = "1.6.0"
config = "0.14.0"
const-str = "0.5.7"
clap = { version = "4.0", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.5.0"
ring = "0.17"
rustls = { version = "0.23.0", features = ["ring"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "bigdecimal",
    "time",
] }
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.0"
reqwest = "0.12.0"