[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.79"
repository = "https://github.com/succinctlabs/sp1"
keywords = ["sp1", "succinct", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
    "bin/cli",
    "crates/types/artifact",
    "crates/types/network",
    "crates/utils",
    "crates/node",
    "crates/artifacts",
    "crates/calibrator",
    "crates/rpc",
    "crates/metrics",
    "crates/vapp",
    "programs/examples/fibonacci",
    "programs/examples/is-prime",
    "programs/vapp/aggregation",
    "programs/vapp/stf",
]
resolver = "2"

[workspace.dependencies]
# spn
spn-artifacts = { path = "crates/artifacts" }
spn-artifact-types = { path = "crates/types/artifact" }
spn-calibrator = { path = "crates/calibrator" }
spn-network-types = { path = "crates/types/network" }
spn-node = { path = "crates/node" }
spn-utils = { path = "crates/utils" }
spn-rpc = { path = "crates/rpc" }
spn-vapp-core = { path = "crates/vapp" }

# sp1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "ernesto/sdk-v5-network-v3" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", branch = "ernesto/sdk-v5-network-v3" }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", branch = "ernesto/sdk-v5-network-v3" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "ernesto/sdk-v5-network-v3" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", branch = "ernesto/sdk-v5-network-v3" }

# aws
aws-config = "1.5.3"
aws-sdk-s3 = "1.38.0"
aws-smithy-async = { version = "1.2.1", features = ["rt-tokio"] }

# alloy
alloy-signer = "0.14.0"
alloy-signer-local = "0.14.0"
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-sol-types = "1.0.0"
alloy-json-rpc = "0.14.0"
alloy = { version = "=0.14.0", features = [
    "reqwest",
    "network",
    "providers",
    "sol-types",
    "rpc-types",
] }
alloy-provider = { version = "0.14.0", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "0.14.0", default-features = false, features = [
    "eth",
] }
alloy-rpc-client = { version = "0.14.0", default-features = false }
alloy-transport = { version = "0.14.0", default-features = false }
alloy-network = { version = "0.14.0", default-features = false }
alloy-rlp = { version = "0.3.3", default-features = false }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "std",
    "env-filter",
] }

# prost
prost-types = "0.13.0"
prost-build = "0.13.0"
prost = "0.13.0"

# serde
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.104"

# tonic
tonic = { version = "0.12", features = ["tls", "tls-roots", "gzip"] }
tonic-build = "0.12.0"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.18.0" }

# misc
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.7.4"
backoff = { version = "0.4", features = ["futures", "tokio"] }
bytes = "1.6.0"
config = "0.14.0"
const-str = "0.5.7"
clap = { version = "4.0", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.5.0"
ring = "0.17"
rustls = { version = "0.23.0", features = ["ring"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "bigdecimal",
    "time",
] }
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.0"
reqwest = "0.12.0"
sha3 = "0.10.8"
sha2 = "0.10.8"
once_cell = "1.18.0"
socket2 = { version = "0.5", default-features = false }
