[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.79"
repository = "https://github.com/succinctlabs/sp1"
keywords = ["sp1", "succinct", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
    "bin/node",
    "crates/network/artifacts",
    "crates/network/rpc",
    "crates/network/utils",
    "crates/node/calibrator",
    "crates/node/core",
    "crates/node/metrics",
    "crates/types/artifact",
    "crates/types/network",
    "crates/vapp",
    "programs/examples/fibonacci",
    "programs/examples/is-prime",
    "programs/vapp/aggregation",
    "programs/vapp/stf",
]
resolver = "2"

[workspace.dependencies]
# spn
spn-artifacts = { path = "crates/network/artifacts" }
spn-rpc = { path = "crates/network/rpc" }
spn-utils = { path = "crates/network/utils" }
spn-calibrator = { path = "crates/node/calibrator" }
spn-node-core = { path = "crates/node/core" }
spn-artifact-types = { path = "crates/types/artifact" }
spn-network-types = { path = "crates/types/network" }
spn-vapp-core = { path = "crates/vapp" }

# sp1
sp1-sdk = "5.1.0"
sp1-prover = "5.1.0"
sp1-verifier = "5.1.0"
sp1-zkvm = "5.1.0"
sp1-build = "5.1.0"

# aws
aws-config = "1.5.3"
aws-sdk-s3 = "1.38.0"
aws-smithy-async = { version = "1.2.1", features = ["rt-tokio"] }

# alloy
alloy-signer = "0.14.0"
alloy-signer-local = "0.14.0"
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-sol-types = "1.0.0"
alloy-json-rpc = "0.14.0"
alloy = { version = "=0.14.0", features = [
    "reqwest",
    "network",
    "providers",
    "sol-types",
    "rpc-types",
] }
alloy-provider = { version = "0.14.0", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "0.14.0", default-features = false, features = [
    "eth",
] }
alloy-rpc-client = { version = "0.14.0", default-features = false }
alloy-transport = { version = "0.14.0", default-features = false }
alloy-network = { version = "0.14.0", default-features = false }
alloy-rlp = { version = "0.3.3", default-features = false }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "std",
    "env-filter",
] }

# prost
prost-types = "0.13.0"
prost-build = "0.13.0"
prost = "0.13.0"

# serde
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.104"

# tonic
tonic = { version = "0.12", features = ["tls", "tls-roots", "gzip"] }
tonic-build = "0.12.0"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.18.0" }

# misc
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.7.4"
backoff = { version = "0.4", features = ["futures", "tokio"] }
bytes = "1.6.0"
config = "0.14.0"
const-str = "0.5.7"
clap = { version = "4.0", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.5.0"
ring = "0.17"
rustls = { version = "0.23.0", features = ["ring"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "bigdecimal",
    "time",
] }
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.0"
reqwest = "0.12.0"
sha3 = "0.10.8"
sha2 = "0.10.8"
once_cell = "1.18.0"
socket2 = { version = "0.5", default-features = false }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }