[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "4.1.0", features = ["native-gnark"] }
sp1-prover = "4.1.0"
sp1-zkvm = "4.1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json", "std", "env-filter"] }
anyhow = "1.0.71"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[build-dependencies]
sp1-build = "4.1.0"
