[package]
name = "spn-artifacts"
description = "Artifact management and storage for SPN."
version = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
spn-network-types = { path = "../types/network" }
spn-artifact-types = { path = "../types/artifact" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-async = { workspace = true }
bytes = { workspace = true }
lazy_static = { workspace = true }
bincode = { workspace = true }
prost = { workspace = true }
twirp = { workspace = true }
