[package]
name = "spn-cli"
version.workspace = true
edition.workspace = true
description = "CLI for the SPN prover"

[dependencies]
prover-core = { path = "../prover-core" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.71"
rustls = { version = "0.23.0", features = ["ring"] }
tonic = { version = "0.12", features = ["tls", "tls-roots", "gzip"] }
alloy-signer-local = "0.11.1"
spn-logging = { path = "../logging" }
spn-network-types = { path = "../types/network" } 