[package]
name = "spn-logging"
description = ""
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
tracing-subscriber = { workspace = true }
serde = { workspace = true }
