[package]
name = "spn-artifacts"
description = "Artifact management and storage for SPN."
version = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# spn
spn-artifact-types = { workspace = true }

# aws
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-async = { workspace = true }

# misc
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
lazy_static = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }