[package]
name = "spn-utils"
description = "Common utilities and helper functions for SPN."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# alloy
alloy-primitives = { version = "1.0.22" }
alloy-sol-types = { version = "1.0.22" }

# misc
anyhow = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
