[package]
name = "spn-calibrator"
description = "Prover implementation for SPN."
version = { workspace = true }
edition = { workspace = true }
publish = false
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }

[dependencies]
# sp1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }

# misc
tracing = { workspace = true }
anyhow = { workspace = true }
