[package]
name = "spn-network-types"
description = ""
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
tonic = { workspace = true, features = ["tls", "tls-roots", "gzip"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
alloy-signer = { workspace = true }
alloy-primitives = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
