[package]
name = "spn-network-types"
description = "Network types for SPN."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
tonic = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, optional = true }
alloy-signer = { workspace = true }
alloy-primitives = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[features]
network = ["tonic", "alloy"]
