[package]
name = "vapp-aggregation-program"
version = "0.1.0"
edition = "2021"

[dependencies]
spn-vapp-core = { workspace = true }
alloy-sol-types = { workspace = true }
sha2 = { workspace = true }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }

[build-dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }

