[package]
name = "vapp-aggregation-program"
version = "0.1.0"
edition = "2021"

[dependencies]
spn-vapp-core = { workspace = true }
alloy-sol-types = { workspace = true }
sha2 = { workspace = true }
sp1-zkvm = { version = "5.1.0", features = ["verify"] }

[build-dependencies]
sp1-sdk = { workspace = true, default-features = false }
