[package]
name = "vapp-aggregation-program"
version = "0.1.0"
edition = "2021"

[dependencies]
spn-vapp-core = { workspace = true }
alloy-sol-types = { workspace = true }
sha2 = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }

[build-dependencies]
sp1-sdk = { workspace = true }
tokio = { workspace = true }
